--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 
   <!-- Elemento de áudio com música em loop -->
   <audio id="bgMusic" loop>
-    <source src="musica.mp3" type="audio/mpeg" /> <!-- Caminho da música de fundo -->
+    <source src="https://motionarray.com/royalty-free-music/mars-1274225/?q=relax&sort_by=most-popular&subcategories=free" type="audio/mpeg" /> <!-- Caminho da música de fundo -->
   </audio>
 
   <script>
